[fix] visible books for mobile

--- a/books/books.css
+++ b/books/books.css
@@ -15,10 +15,9 @@ main h1 {
 }
 
 .book-card {
-  width: 23%;
-  padding: 1rem;
+  width: 100%;
+  max-width: 300px;
   overflow: hidden;
-
   border-left: 1px solid var(--lightgreen);
   border-top: 1px solid var(--lightgreen);
   border-radius: 25px;
